--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 
 :root{
-    --var-blue: #020092;
-    --var-gold: #bc8d35;
+    --color-primary: #020092;
+    --gold: #bc8d35;
+    --bg-gray: #e8e8e8;
 }
 
 *{
@@ -10,13 +11,24 @@
     font-family: 'Open Sans', sans-serif;
 }
 
+h1, h2, h3, h4, h5, h6{
+    margin: 0;
+}
+
 html, body{
-    background-color: #e8e8e8;
+    background-color: var(--bg-gray);
+}
+
+#brasao{
+    width: 25px;
 }
 
 header{
-    background-color: var(--var-blue);
-    color: var(--var-gold);
+    background-color: var(--color-primary);
+    color: var(--gold);
+    height: 60px;
+    display: flex;
+    align-items: center;
 }
 
 nav{
@@ -25,7 +37,27 @@ nav{
     justify-content: space-between;
 }
 
+nav a{
+    font-size: 12px;
+    font-weight: 400;
+}
+
+nav h1{
+    font-size: 24px;
+    font-weight: 700;
+    display: inline;
+}
+
 a, a:hover {
     color: unset;
     text-decoration: none;
+}
+
+.dsmovie-contact-container{
+    display: flex;
+    align-items: center;
+}
+
+.dsmovie-contact-container img{
+    margin-right: 10px;
 }
