--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ a, a:hover {
 }
 
 .dsmovie-card{
-    width: 360px;
+    width: 100%;
 }
 
 .dsmovie-card img{
@@ -87,7 +87,7 @@ a, a:hover {
 }
 
 .dsmovie-card-description h3{
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 700;
     margin-bottom: 25px;
 }
@@ -96,8 +96,8 @@ a, a:hover {
     width: 180px;
    height: 40px;
    background-color: var(--color-primary);
-   color: white;
-   font-size: 14px;
+   color: var(--gold);
+   font-size: 16px;
    font-weight: 700;
    display: flex;
    align-items: center;
