--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
     --bg-gray: #e8e8e8;
     --text-gray: #4A4A4A;
     --text-light-gray: #AAA;
+    --star-yellow: #FFBB3A;
 }
 
 *{
@@ -85,7 +86,7 @@ a, a:hover {
     justify-content: space-between;
     background-color: white;
     border-radius: 0 0 8px 8px;
-    min-height: 150px;
+    height: 220px;
 }
 
 .dsmovie-card-description h3{
@@ -93,6 +94,29 @@ a, a:hover {
     font-weight: 700;
     margin-bottom: 25px;
     text-align: center;
+}
+
+.dsmovie-card-description-bottom{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dsmovie-card-description-bottom h4{
+    color: var(--star-yellow);
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.dsmovie-card-description-bottom p{
+    color: var(--text-light-gray);
+    font-size: 12px;
+    font-weight: 400;
+    margin-bottom: 10px;
+}
+
+.dsmovie-card-description-bottom img{
+width: 22px;
 }
 
 .dsmovie-btn, .dsmovie-btn:hover{
