--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ a, a:hover {
 }
 
 #dsmovie-card-list{
-    padding: 40px 10px;
+    padding: 0 10px;
 }
 
 .dsmovie-card{
@@ -173,4 +173,48 @@ width: 22px;
 .dsmovie-form-group label{
     font-size: 14px;
     color: var(--text-light-gray);
+}
+
+.dsmovie-pagination-container{
+    padding: 15px 0;
+    display: flex;
+    justify-content: center;
+}
+
+.dsmovie-pagination-box{
+    display: flex;
+    width: 180px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.dsmovie-pagination-box p{
+    margin: 0;
+    font-size: 12px;
+    color: var(--color-primary);
+    font-weight: 400;
+}
+
+.dsmovie-pagination-box button{
+    width: 40px;
+    height: 40px;
+    border: 1px solid var(--color-primary);
+    border-radius: 4px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.dsmovie-pagination-box button img{
+filter: brightness(0%) saturate(100%) invert(14%) sepia(41%) saturate(3860%) hue-rotate(217deg) brightness(113%) contrast(125%);
+}
+
+
+.dsmovie-pagination-box button:disabled{
+    border: 1px solid var(--text-light-gray);
+}
+
+.dsmovie-pagination-box button:disabled img{
+    filter: unset;
 }
